# ducktape

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.rs  clean-git-history.sh  config.toml  deny.toml  docker-compose.yml  ducktape.code-workspace  files-to-remove.txt  run-benchmarks.sh  security-check.sh  sensitive-patterns.txt  setup-security-checks.sh  simple_time_parser  simple_time_parser.rs  test-websocket.html  test_contacts  test_contacts.rs  test_input.txt  test_time_calendar.sh  test_time_interactive.sh  test_time_parser.rs  test_time_parser_cli.sh  test_time_stdin  test_time_stdin.rs  test_timezone.sh  test_timezone_comprehensive.sh  test_timezone_ducktape.sh  todos_state.json  verify_time_parser  verify_time_parser.rs  version_test.rs
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: benchmark.yml  cache-config.yml  ci.yml  codeql.yml  credential-scan.yml  docs.yml  macos-release.yml  release.yml  rust.yml  security-audit.yml  security.yml  update-homebrew.yml
DucktapeDesktop/: .swiftlint.yml
benches/: benchmark.rs
client-examples/: ChatMessage.swift  WebSocketEventCreation.swift  WebSocketEventCreationView.swift
docs/: api-reference.md  timezone-support.md
hooks/: pre-commit
src/: api_keys.rs  api_server.rs  app.rs  calendar.rs  calendar_contacts.rs  calendar_import.rs  calendar_legacy.rs  calendar_validation.rs  cli.rs  command_parser.rs  command_processor.rs  config.rs  contact_groups.rs  deepseek_parser.rs  deepseek_reasoning.rs  env_debug.rs  env_loader.rs  env_manager.rs  env_store.rs  event_search.rs  file_search.rs  grok_parser.rs  lib.rs  main.rs  notes.rs  openai_parser.rs  parser_reexport.rs  parser_trait.rs  reminders.rs  state.rs  static_version.rs  terminal_parser.rs  todo.rs  validation.rs  version.rs  version_display.rs  was-working.rs  websocket.rs  websocket_server.rs  zoom.rs
src/api_server/: handlers.rs  mod.rs  models.rs  routes.rs  server.rs  websocket.rs
src/calendar/: calendar_applescript.rs  calendar_contacts.rs  calendar_import.rs  calendar_types.rs  calendar_validation.rs  mod.rs
src/command_processor/: calendar_handler.rs  config_handler.rs  contact_groups_handler.rs  exit_handler.rs  help_handler.rs  mod.rs  notes_handler.rs  reminder_handler.rs  todo_handler.rs  utilities_handler.rs  version_handler.rs
src/commands/: calendar.rs  config.rs  contacts.rs  debug_env.rs  help.rs  mod.rs  notes.rs  todo.rs  utilities.rs  version.rs
src/notes/: mod.rs  notes_applescript.rs  notes_types.rs  notes_util.rs  notes_validation.rs
src/parser/: mod.rs  traits.rs  utils.rs
src/parser/command/: mod.rs
src/parser/deepseek/: mod.rs
src/parser/grok/: mod.rs
src/parser/natural_language/: command_mapping.rs  mod.rs  time_parser_fix.rs  time_parser_integration.rs  utils.rs
src/parser/natural_language/grok/: api.rs  mod.rs  time_extractor.rs  utils.rs
src/parser/openai/: mod.rs  parser.rs  utils.rs
src/parser/terminal/: mod.rs
src/reminder/: mod.rs  reminder_applescript.rs  reminder_types.rs  reminder_util.rs  reminder_validation.rs
src/services/: calendar.rs
src/todo/: mod.rs  todo_applescript.rs  todo_types.rs  todo_util.rs  todo_validation.rs
tests/: command_args_tests.rs  integration_calendar_test.rs  integration_config_test.rs  integration_event_import_test.rs  integration_test.rs  parser_integration_test.rs  quoted_args_test.rs  time_parser_integration_test.rs  time_parser_test.rs
