[package]
name = "ducktape"
version = "0.1.0"
edition = "2021"
authors = ["DuckTapeAI"]
description = "A terminal-based calendar management tool with natural language processing and AI integration"
license = "MIT"
repository = "https://github.com/DuckTapeAI/ducktape"
documentation = "https://github.com/DuckTapeAI/ducktape#readme"
keywords = ["calendar", "ai", "cli", "productivity", "natural-language"]
categories = ["command-line-utilities", "date-and-time"]
readme = "README.md"
default-run = "ducktape"

[dependencies]
rustyline = "15.0.0"
walkdir = "2.3.3"
ical = "0.11.0"
csv = "1.3.0"
chrono = { version = "0.4.26", features = ["serde"] }
anyhow = "1.0.72"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
reqwest = { version = "0.12.0", features = ["json"] }
tokio = { version = "1.35.0", features = ["full"] }
lru = "0.13"
once_cell = "1.8"
regex = "1.9"
directories = "6.0"
toml = "0.8"
chrono-tz = "0.10.3"
scopeguard = "1.2.0"
axum = { version = "0.8.1", features = ["ws"] }
tower-http = { version = "0.6.2", features = ["cors"] }
futures = "0.3.28"
uuid = { version = "1.6.0", features = ["v4"] }
async-trait = "0.1.74"
dotenvy = "0.15"

# Zoom API Integration
oauth2 = "5.0.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.7"
url = "2.4.1"
base64 = "0.22.1"
tokio-rustls = "0.26.0"
secrecy = "0.10.3"

[dev-dependencies]
pretty_assertions = "1.3"
test-case = "3.1"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
cargo-audit = "0.21.2"
cargo-deny = "0.15.1"
cargo-udeps = "0.1.40"

[[bench]]
name = "benchmark"
harness = false
